--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <title>Autohaus</title>
   </head>
   <body>
-    <h1>Autohaus</h1>
-    <p id="info"></p>
+    <h1 class="container text-center p-3">Autohaus</h1>
+    <div class="container-fluid">
+        <div class="row" id="info"></div>
+    </div>
 
     <!-- JavaScript -->
     <script src="app.js"></script>
