--- a/index.html
+++ b/index.html
@@ -11,42 +11,46 @@
     <title>Autohaus</title>
   </head>
   <body>
-    <h1 class="container text-center p-3">Autohaus</h1>
-    <div class="container  w-25">
-        <div class="input-group mb-3">
-            <div class="input-group-prepend">
-              <span class="input-group-text" id="basic-addon1">&#128269;</span>
-            </div>
-            <input type="text" class="form-control" placeholder="suchen!?" aria-label="Suche" aria-describedby="basic-addon1" id="suche" oninput="suche()">
+    <div class="container">
+      <h1 class="container text-center p-3">Autohaus</h1>
+      <div class="container w-25">
+          <div class="input-group mb-3">
+              <div class="input-group-prepend">
+                <span class="input-group-text" id="basic-addon1">&#128269;</span>
+              </div>
+              <input type="text" class="form-control" placeholder="suchen!?" aria-label="Suche" aria-describedby="basic-addon1" id="suche" oninput="suche()">
           </div>
-    </div>
-    <div class="container pb-2">
-        <div class="row">
-            <div class="col">
-                <h3 class="text-center p-2 text-info">PWK</h3>
-                <hr class="w-25">
-                <div class="row justify-content-around m-1" id="infoLinks"></div>
-            </div>
-            <div class="col">
-                <h3 class="text-center p-2 text-success">LWK</h3>
-                <hr class="w-25">
-                <div class="row justify-content-around m-1" id="infoRechts"></div>
-            </div>
-        </div>
-    </div>
-    <hr class="w-50">
-    <nav aria-label="Page navigation example">
-        <ul class="pagination justify-content-around p-3">
-            <li class="page-item"><a class="page-link" href="javascript:vorSeite()" id="btnPrev">Vorherige Seite</a></li>
-            <li class="page-item"><p class="h5" id="page"></p></li>
-            <li class="page-item h5">von</li>
-            <li class="page-item"><p class="h5" id="allpages"></p></li>
-            <li class="page-item"><a class="page-link" href="javascript:naechSeite()" id="btnNext">Nächste Seite</a></li>
-        </ul>
-    </nav>
-    <div class="row">
-        <div class="col" id="listingTable1"></div>
-        <div class="col" id="listingTable2"></div>
+      </div>
+      <div class="container">
+          <div class="row">
+              <div class="col">
+                  <h3 class="text-center text-info">PWK</h3>
+                  <hr class="w-25">
+                  <div class="row justify-content-around m-1" id="infoLinks"></div>
+              </div>
+              <div class="col">
+                  <h3 class="text-center text-success">LWK</h3>
+                  <hr class="w-25">
+                  <div class="row justify-content-around m-1" id="infoRechts"></div>
+              </div>
+          </div>
+      </div>
+      <hr class="w-50">
+      <div class="container">
+        <nav aria-label="Page navigation example">
+          <ul class="pagination justify-content-around">
+              <li class="page-item"><a class="page-link" href="javascript:vorSeite()" id="btnPrev">Vorherige Seite</a></li>
+              <li class="page-item"><p id="page"></p></li>
+              <li class="page-item ">von</li>
+              <li class="page-item"><p id="allpages"></p></li>
+              <li class="page-item"><a class="page-link" href="javascript:naechSeite()" id="btnNext">Nächste Seite</a></li>
+          </ul>
+      </nav>
+      </div>
+      <div class="row">
+          <div class="col" id="listingTable1"></div>
+          <div class="col" id="listingTable2"></div>
+      </div>
     </div>
 
     <!-- JavaScript -->
